--- a/css/style.css
+++ b/css/style.css
@@ -51,15 +51,20 @@ header {
     background-color: #008F6E;
 }
 
+.background {
+    width: 100%;
+    background: #73e1b870;
+}
+
 .float-left {
     max-width: 40%;
     position: absolute;
+    margin-top: 1.4em;
 }
 
 .float-left li {
-    margin-right: 1em;
-    background-color: #4AD9CA;
-    padding: 0.7em;
+    margin-right: -1.4em;
+    padding: 0.5em 0 0 0;
     border-radius: 0.8em;
     min-width: 7em;
     text-align: center;
@@ -93,8 +98,12 @@ header {
     padding: 0.6em;
     margin-right: 0;
     background-color: #04D99D;
-    border-radius: 1em;
+    border-radius: .1em;
     box-shadow: 3px 3px #b1b1b1;
+    -webkit-border-radius: .1em;
+    -moz-border-radius: .1em;
+    -ms-border-radius: .1em;
+    -o-border-radius: .1em;
 }
 
 .float-right li:last-child:hover {
@@ -118,7 +127,6 @@ header {
 
 .img img {
     max-width: 250px;
-    margin-top: 5em;
 }
 
 .popis {
@@ -143,19 +151,61 @@ header {
     margin: 10px 10px 10px;
 }
 
-.btn-small {
-    background: #4AD9CA;
-    border: 0.5em solid white;
-    border-radius: 1.4em;
-    box-shadow: 2px 2px #b1b1b1;
-    -webkit-border-radius: 1.4em;
-    -moz-border-radius: 1.4em;
-    -ms-border-radius: 1.4em;
-    -o-border-radius: 1.4em;
+.btn-small a:hover {
+    color: #b1b1b1
 }
 
-.btn-small:hover {
-    background-color: #3db1a5;
-    box-shadow: none;
-    border: 0.5em solid #e1e0e0;
+.btn-small:first-child {
+    margin-right: -2em
+}
+
+@media (max-width:1100px) {
+    .popis {
+        left: 54%;
+    }
+}
+
+@media (max-width:820px) {
+    .popis {
+        left: 70%
+    }
+}
+
+@media (max-width: 710px) {
+    .float-right {
+        align-items: baseline;
+        text-align: center;
+        margin: 0 auto;
+        max-width: 60%
+    }
+    .float-right {
+        margin: 0 auto;
+        margin-bottom: 2em;
+        float: none;
+        align-items: baseline;
+        text-align: center;
+    }
+    .float-left {
+        visibility: hidden;
+    }
+}
+
+@media (max-width:590px) {
+    .float-right {
+        max-width: 90%
+    }
+    .float-right li:last-child {
+        max-width: 15em
+    }
+}
+
+@media (max-width:490px) {
+    .popis {
+        display: contents;
+        background: none;
+        box-shadow: none;
+    }
+    .popis p {
+        margin: 0 auto
+    }
 }
