--- a/css/style.css
+++ b/css/style.css
@@ -1,211 +1,420 @@
-html {
-    box-sizing: border-box
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: inherit
-}
-
-body {
-    color: #2f2f2f;
-    font: 0.9em/1.35em 'avant garde', 'century Gothic', sans-serif;
-    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
-    width: 100%
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    vertical-align: middle;
-}
-
-p {
-    margin: 0;
-    font-size: 18px
-}
-
-ul {
-    list-style: none;
-    display: flex
-}
-
-a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-}
-
-.group {
-    content: " ";
-    display: table;
-}
-
-.group:after {
-    clear: both;
-}
-
-header {
-    width: 100%;
-    background-color: #008F6E;
-}
-
-.background {
-    width: 100%;
-    background: #73e1b870;
-}
-
-.float-left {
-    max-width: 40%;
-    position: absolute;
-    margin-top: 1.4em;
-}
-
-.float-left li {
-    margin-right: -1.4em;
-    padding: 0.5em 0 0 0;
-    border-radius: 0.8em;
-    min-width: 7em;
-    text-align: center;
-}
-
-.float-left a {
-    font-weight: bold;
-    font-size: 1em;
-}
-
-.float-left {
-    float: left;
-}
-
-.float-right {
-    max-width: 40%;
-    float: right;
-    align-items: baseline;
-    padding-left: 0;
-    padding-right: 2em
-}
-
-.float-right li {
-    margin-right: 1em;
-    text-align: center;
-    margin-top: 5px;
-}
-
-.float-right li:last-child {
-    width: 100%;
-    padding: 0.6em;
-    margin-right: 0;
-    background-color: #04D99D;
-    border-radius: .1em;
-    box-shadow: 3px 3px #b1b1b1;
-    -webkit-border-radius: .1em;
-    -moz-border-radius: .1em;
-    -ms-border-radius: .1em;
-    -o-border-radius: .1em;
-}
-
-.float-right li:last-child:hover {
-    background-color: #06f8b3;
-    color: black;
-    box-shadow: none
-}
-
-.icons {
-    color: #ba3329;
-    font-size: 48px
-}
-
-.cv {
-    font-size: 1em
-}
-
-.img {
-    display: block
-}
-
-.img img {
-    max-width: 250px;
-}
-
-.popis {
-    position: absolute;
-    top: 35%;
-    left: 50%;
-    margin-left: -150px;
-    width: 300px;
-    background: #4AD9CA;
-    border: 0.7em solid white;
-    border-radius: 1.9em;
-    box-shadow: 4px 4px #b1b1b1;
-}
-
-.popis h1 {
-    text-align: center
-}
-
-.popis p {
-    max-width: 300px;
-    text-align: center;
-    margin: 10px 10px 10px;
-}
-
-.btn-small a:hover {
-    color: #b1b1b1
-}
-
-.btn-small:first-child {
-    margin-right: -2em
-}
-
-@media (max-width:1100px) {
-    .popis {
-        left: 54%;
+    html {
+        box-sizing: border-box
     }
-}
-
-@media (max-width:820px) {
-    .popis {
-        left: 70%
+    
+    *,
+    *::before,
+    *::after {
+        box-sizing: inherit
     }
-}
-
-@media (max-width: 710px) {
-    .float-right {
-        align-items: baseline;
-        text-align: center;
-        margin: 0 auto;
-        max-width: 60%
+    
+    body {
+        color: #2f2f2f;
+        font: 0.9em/1.35em 'avant garde', 'century Gothic', sans-serif;
+        font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+        width: 100%
     }
-    .float-right {
-        margin: 0 auto;
-        margin-bottom: 2em;
-        float: none;
-        align-items: baseline;
-        text-align: center;
+    
+    img {
+        max-width: 100%;
+        height: auto;
+        vertical-align: middle;
     }
+    
+    p {
+        margin: 0;
+        font-size: 18px
+    }
+    
+    ul {
+        list-style: none;
+        display: flex
+    }
+    
+    a {
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+    }
+    
+    .group {
+        content: " ";
+        display: table;
+    }
+    
+    .group:after {
+        clear: both;
+    }
+    
+    .menu {
+        display: none;
+    }
+    /*HEADER*/
+    
+    header {
+        width: 100%;
+        background-color: #dfdfdf;
+    }
+    
+    .background {
+        width: 100%;
+        background: #008F6E;
+        border-bottom: 2px solid #dbe3e2;
+    }
+    
     .float-left {
-        visibility: hidden;
+        max-width: 40%;
+        position: absolute;
+        margin-top: 1.4em;
     }
-}
-
-@media (max-width:590px) {
+    
+    .float-left li {
+        margin-right: -1.4em;
+        padding: 0.5em 0 0 0;
+        border-radius: 0.8em;
+        min-width: 7em;
+        text-align: center;
+    }
+    
+    .float-left a {
+        font-weight: bold;
+        font-size: 1em;
+    }
+    
+    .float-left {
+        float: left;
+    }
+    
     .float-right {
-        max-width: 90%
+        max-width: 40%;
+        float: right;
+        align-items: baseline;
+        padding-left: 0;
+        padding-right: 2em
     }
+    
+    .float-right li {
+        margin-right: 1em;
+        text-align: center;
+        margin-top: 5px;
+    }
+    
     .float-right li:last-child {
-        max-width: 15em
+        width: 100%;
+        padding: 0.6em;
+        margin-right: 0;
+        background-color: #04D99D;
+        border-radius: .1em;
+        box-shadow: 3px 3px #b1b1b1;
+        -webkit-border-radius: .1em;
+        -moz-border-radius: .1em;
+        -ms-border-radius: .1em;
+        -o-border-radius: .1em;
     }
-}
-
-@media (max-width:490px) {
+    
+    .float-right li:last-child:hover {
+        background-color: #06f8b3;
+        color: black;
+        box-shadow: none
+    }
+    
+    .hidden {
+        display: none;
+    }
+    
+    .icons {
+        color: #ba3329;
+        font-size: 48px
+    }
+    
+    .cv {
+        font-size: 1em
+    }
+    
+    .img {
+        display: block
+    }
+    
+    .img img {
+        max-width: 600px;
+    }
+    
     .popis {
-        display: contents;
-        background: none;
-        box-shadow: none;
+        position: absolute;
+        top: 30%;
+        left: 49%;
+        margin-left: -250px;
+        width: 500px;
+        background: #1010101f;
+        /* border: 0.7em solid white; */
+        /* border-radius: 1.9em; */
+        box-shadow: 4px 4px #b1b1b1;
     }
+    
+    .popis h1 {
+        text-align: center;
+        font-size: 2.8em;
+        margin-bottom: 0.5em;
+        text-shadow: 2px 2px #6d426d61;
+    }
+    
     .popis p {
-        margin: 0 auto
+        max-width: 100%;
+        text-align: center;
+        margin: 10px 10px 10px;
+        font-size: 2em;
+        line-height: 1em;
+        padding: 0.5em;
     }
-}
+    
+    .btn-small a:hover {
+        color: #b1b1b1
+    }
+    
+    .btn-small:first-child {
+        margin-right: -2em
+    }
+    /*MAIN*/
+    
+    main {
+        max-width: 100%;
+        padding: 0 4em 2em 2em;
+        text-align: center;
+        background-image: url(../img/rm191-nu-08.jpg);
+        background-color: #dfdfdf;
+        height: 1000px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        margin-right: 0
+    }
+    
+    .header {
+        max-width: 60%;
+        margin: 0 auto;
+        font-weight: 200;
+        line-height: 1.3em;
+        padding-top: 3em;
+    }
+    
+    .right {
+        max-width: 35em;
+        float: right;
+        margin-top: 16em;
+        margin-right: 10%;
+        background-color: #e4c998;
+        padding: 1.5em 2em 2.4em 2em;
+        box-shadow: 5px 5px #000000ad;
+        border-radius: 0.5em;
+    }
+    
+    .left {
+        max-width: 35em;
+        float: left;
+        margin-top: 16em;
+        margin-left: 10%;
+        background-color: #e4c998;
+        padding: 1.5em 2em 2.4em 2em;
+        box-shadow: 5px 5px #000000ad;
+        border-radius: 0.5em;
+        clear: both;
+    }
+    
+    .float {
+        margin: auto;
+        width: 80%;
+    }
+    
+    main article {
+        width: 100%;
+        padding: 2em;
+        background: #ffffff94;
+        margin-top: 12em;
+    }
+    /*MEDIA QUERIES*/
+    
+    @media (max-width:1200px) {
+        .float {
+            max-width: 100%;
+        }
+        .left {
+            float: none;
+            margin-left: -3%;
+            border-radius: 0 3em 0 0;
+        }
+        .right {
+            border-radius: 3em 0 0 0;
+            margin-right: -5.1%;
+            margin-bottom: 8%;
+        }
+    }
+    
+    @media (max-width:1100px) {
+        .popis {
+            left: 66%;
+        }
+    }
+    
+    @media (max-width:900px) {
+        .float-right {
+            max-width: 60%
+        }
+        main {
+            padding-top: 0;
+        }
+        .header {
+            max-width: 100%;
+            margin: 0 auto;
+            font-weight: 200;
+            line-height: 1.3em;
+            padding: 2em;
+            background: #a34e2eb8;
+            margin-top: 2em;
+            color: white;
+        }
+        .right {
+            max-width: 80%;
+            float: none;
+            background-color: #a14a2a;
+            padding: 1.5em 2em 2.4em 2em;
+            box-shadow: 5px 5px #000000a6;
+            border-radius: 0;
+            margin: 0 auto;
+            margin-top: 20%;
+            margin-bottom: 20%;
+            color: white;
+            -webkit-border-radius: 0;
+            -moz-border-radius: 0;
+            -ms-border-radius: 0;
+            -o-border-radius: 0;
+        }
+        .left {
+            margin: 0 auto;
+            max-width: 80%;
+            margin-top: 0;
+            margin-left: 0;
+            border-radius: 0;
+            display: inline-block;
+            -webkit-border-radius: 0;
+            -moz-border-radius: 0;
+            -ms-border-radius: 0;
+            -o-border-radius: 0;
+        }
+    }
+    
+    @media (max-width:820px) {
+        .popis {
+            left: 65%
+        }
+    }
+    
+    @media (max-width:780px) {
+        .float-left {
+            padding-left: 0;
+        }
+    }
+    
+    @media (max-width:770px) {
+        .popis {
+            background-color: #008f6e00;
+            box-shadow: none;
+            max-width: 400px;
+            left: 77%
+        }
+        .background {
+            text-align: center;
+        }
+        .float-right li:last-child {
+            display: none;
+        }
+        .hidden {
+            visibility: visible;
+            max-width: 50px;
+            color: #101010;
+            font-weight: 900;
+            display: inline-block;
+        }
+        .visible {
+            padding: 1em;
+            background-color: #98ffdc;
+            border-radius: 35%;
+            box-shadow: 2px 2px #6a6a6a;
+        }
+        .left,
+        .right {
+            max-width: 100%;
+        }
+        .float {
+            width: 100%;
+        }
+    }
+    
+    @media (max-width: 710px) {
+        .float-right {
+            align-items: baseline;
+            text-align: center;
+            margin: 0 auto;
+            max-width: 16em;
+        }
+        .float-right {
+            margin: 1em;
+            float: left;
+            align-items: baseline;
+            text-align: center;
+        }
+        .float-left {
+            display: none;
+        }
+        .float-right li:last-child {
+            max-width: 50%
+        }
+        .popis {
+            font-size: 0.7em;
+            max-width: 56%;
+        }
+        ul {
+            display: inline-flex
+        }
+        .menu {
+            display: inline-block;
+            position: relative;
+            top: 1.3em;
+            right: -6em;
+        }
+        .menu img {
+            max-width: 41px;
+        }
+    }
+    
+    @media (max-width: 590px) {
+        .popis {
+            max-width: 300px;
+            left: 95%;
+            display: contents;
+        }
+        .popis p {
+            max-width: 400px;
+            text-align: center;
+            margin: 10px 10px 10px;
+            font-size: 2em;
+            line-height: 1em;
+            padding: 0.5em;
+            display: inline-block;
+        }
+        .popis h1 {
+            max-width: 400px
+        }
+        .background .group {
+            display: inline-flex;
+            justify-content: flex-start;
+        }
+        .float-right {
+            margin: 1em
+        }
+    }
+    
+    @media (max-width: 569px) {
+        .menu {
+            right: -3em;
+            margin-right: 3em
+        }
+    }
